@@ -37,6 +37,12 @@ Build
 
 - Issue #3758: Add ``patchcheck`` build target to .PHONY.
 
+C-API
+-----
+
+- Issue #4122: On Windows, fix a compilation error when using the
+  Py_UNICODE_ISSPACE macro in an extension module.
+
 
 What's New in Python 2.6 final
 ==============================
